src/main/kotlin/com/example/ohsiria/global/config/error/exception/InvalidTokenException.kt
package com.example.ohsiria.global.config.error.exception

import com.example.ohsiria.global.config.error.data.ErrorCode

object InvalidTokenException: BusinessException(ErrorCode.INVALID_TOKEN)
